Update player image in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>Vote: <span id="score">0</span></p>
 
     <div class="game-area" id="gameArea">
-        <img src="pato.png" id="player" class="player">
+        <img src="pato3.png" id="player" class="player">
     </div>
 
     <button onclick="startGame()" class="start-btn"><b>Start Game</b></button>
@@ -26,3 +26,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
